added the watch order page

--- a/index.html
+++ b/index.html
@@ -1,71 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Marvel Watch Order</title>
-  <link rel="stylesheet" href="About_style.css">
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-<header>
-  <h1>Marvel Cinematic Universe Watch Order</h1>
-</header>
-<nav aria-label="Main navigation">
-  <a href="#about">About Marvel</a>
-  <a href="watch-order.html">Watch Order</a>
-  <a href="movies.html">Movies</a>
-  <a href="tv-shows.html">TV Shows</a>
-  <a href="comics.html">Comics</a>
-</nav>
 
-<main>
-  <section id="about">
-  <h2>About the Marvel Cinematic Universe (MCU)</h2>
-  <p>
-    The Marvel Cinematic Universe (MCU) is a vast and interconnected media franchise created by Marvel Studios that features superheroes, villains, and epic storylines spanning movies, TV shows, and streaming specials. Starting with <em>Iron Man</em> in 2008, the MCU has expanded through multiple phases, introducing beloved characters like Captain America, Thor, Black Widow, Spider-Man, and many more.
-  </p>
-  <p>
-    The MCU is unique for its shared universe concept — each movie or show connects with others through overlapping characters and events, creating a rich tapestry of stories. This interconnectedness means watching the MCU in a particular order can greatly enhance the viewing experience by revealing plot twists, character arcs, and Easter eggs in their intended context.
-  </p>
-  <p>
-    Because of the MCU's complexity, there are different ways to watch the movies and shows, such as by release order or chronological story timeline. This can be confusing for both new fans and longtime viewers who want to experience the story cohesively.
-  </p>
-  <h3>What This Site Does</h3>
-  <p>
-    This website is designed to help you navigate the Marvel Cinematic Universe by providing clear watch orders and guidance on how to enjoy the MCU in the most coherent way possible. Whether you’re a newcomer wanting to start from the beginning or a fan looking to rewatch with a fresh perspective, this site offers curated viewing sequences and explanations for each approach.
-  </p>
-  <p>
-    By following the watch orders and tips here, you can dive into the Marvel universe with confidence, making sure you don’t miss key storylines and character developments along the way.
-  </p>
-  <p>
-    The MCU also explores various themes like heroism, sacrifice, identity, and friendship, making it appealing to a wide audience beyond just superhero fans. The franchise continues to grow with upcoming movies and series that expand the universe further.
-  </p>
+  <header>
+    <h1>Marvel Cinematic Universe Watch Order</h1>
+  </header>
 
-  <h3>Phases of the MCU</h3>
-  <p>
-    The MCU is divided into phases, each representing a group of films and series that build upon each other:
-  </p>
-  <ul>
-    <li><strong>Phase 1:</strong> Introduces core characters like Iron Man, Captain America, and Thor.</li>
-    <li><strong>Phase 2:</strong> Expands the universe with new heroes and deeper storylines.</li>
-    <li><strong>Phase 3:</strong> Culminates in epic crossover events like Avengers: Infinity War and Endgame.</li>
-    <li><strong>Phase 4:</strong> Introduces new characters and explores the multiverse concept.</li>
-  </ul>
+  <nav>
+    <a href="#about">About Marvel</a>
+    <a href="watch-order.html">Watch Order</a>
+    <a href="movies.html">Movies</a>
+    <a href="tv-shows.html">TV Shows</a>
+    <a href="comics.html">Comics</a>
+  </nav>
 
-  <p>
-    This site will guide you on how to watch the MCU in both release and chronological order, helping you understand the story better.
-  </p>
-</section>
+  <section class="hero">
+    <h1>🦸 Watch the Marvel Universe in the Right Order</h1>
+    <p>Chronological, Release, and Custom Orders – All in One Place</p>
+    <a href="watch-order.html" class="cta-button">Start Watching</a>
+  </section>
 
-</main>
-<footer>
-  <p>&copy; 2025 Ghazi Alqmmaz.</p>
-  <div id="social">
-    <a href="https://www.instagram.com/ghazi.alqmmaz/#" target="_blank">Instagram</a>
-    <a href="https://www.linkedin.com/in/gazi-alqmmaz-15b963335/" target="_blank">LinkedIn</a>
-    <a href="https://github.com/gazi05" target="_blank">GitHub</a>
-  </div>
-  <p>For more information, visit the <a href="https://www.marvel.com/">official Marvel website</a>.</p>
-</footer>
+  <main>
+    <div class="quick-links">
+      <a href="watch-order.html">📅 Chronological Order</a>
+      <a href="watch-order.html#release">🗓️ Release Order</a>
+      <a href="tv-shows.html">📺 TV Shows</a>
+      <a href="movies.html">🎬 Movies List</a>
+    </div>
+
+    <section id="about">
+      <h2>About the Marvel Cinematic Universe (MCU)</h2>
+      <p>
+        The Marvel Cinematic Universe (MCU) is a vast and interconnected franchise created by Marvel Studios featuring superheroes, villains, and storylines across movies, shows, and streaming specials. Starting with <em>Iron Man</em> in 2008, it spans decades of content and storytelling.
+      </p>
+      <p>
+        The MCU’s shared universe concept links characters and events across different titles, making viewing order crucial for the best experience. Fans can follow different paths: release order, chronological story order, or thematic arcs.
+      </p>
+
+      <h3>What This Site Does</h3>
+      <p>
+        This site helps fans follow the MCU in a clear and logical order. Whether you're a newcomer or a rewatching fan, you'll find watch lists, phase explanations, and tips to enjoy the Marvel universe to its fullest.
+      </p>
+
+      <h3>Phases of the MCU</h3>
+      <ul>
+        <li><strong>Phase 1:</strong> Origin stories (Iron Man, Thor, Captain America).</li>
+        <li><strong>Phase 2:</strong> Expands characters and connects plots (Age of Ultron, Guardians).</li>
+        <li><strong>Phase 3:</strong> Culminates in Infinity War and Endgame.</li>
+        <li><strong>Phase 4:</strong> Post-Endgame world and multiverse introduction.</li>
+        <li><strong>Phase 5:</strong> Ongoing expansion (Quantumania, Guardians Vol. 3, Loki S2).</li>
+        <li><strong>Phase 6:</strong> Upcoming final saga (Kang Dynasty, Secret Wars).</li>
+      </ul>
+
+      <p>
+        Use this site to explore the MCU through multiple watch paths, whether it's in-universe order or original release sequence.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Ghazi Alqmmaz</p>
+    <div id="social">
+      <a href="https://www.instagram.com/ghazi.alqmmaz/#" target="_blank">Instagram</a>
+      <a href="https://www.linkedin.com/in/gazi-alqmmaz-15b963335/" target="_blank">LinkedIn</a>
+      <a href="https://github.com/gazi05" target="_blank">GitHub</a>
+    </div>
+    <p>For more information, visit the <a href="https://www.marvel.com/" target="_blank">official Marvel website</a>.</p>
+  </footer>
+
 </body>
 </html>
