--- a/watch-order.html
+++ b/watch-order.html
@@ -3,13 +3,77 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marvel Watch Order</title>
   <link rel="stylesheet" href="watch-order.css">
+  <title>Watch Order</title>
 </head>
 <body>
-  <main>
-    loeading...
+  <header>
     <h1>Marvel Cinematic Universe Watch Order</h1>
-  </main>
+  </header>
+  <nav>
+    <a href="index.html#about">About Marvel</a>
+    <a href="watch-order.html">Watch Order</a>
+    <a href="movies.html">Movies</a>
+    <a href="tv-shows.html">TV Shows</a>
+    <a href="comics.html">Comics</a>
+  </nav>
+<main>
+  <section>
+  <h2>Watch Order Options</h2>
+  <div>
+    <p>
+      The Marvel Cinematic Universe (MCU) offers a rich, interconnected story that can be enjoyed in different ways. To help you get the best viewing experience, here are the two most popular watch orders:
+    </p>
+    <ul>
+      <li><strong>Release Order:</strong> Watch the movies and shows in the order they were originally released. This lets you experience the MCU as the world saw it unfold, with surprises and reveals timed as intended.</li>
+      <li><strong>Chronological Order:</strong> Watch everything in the timeline order according to the story events. This method helps you follow the MCU’s timeline seamlessly from start to finish.</li>
+    </ul>
+    <p>
+      Both approaches have their own charm, and on this site, you can find detailed lists for each watch order, along with tips to enjoy the MCU fully. Whether you’re a newcomer or a longtime fan, these guides will help you dive deeper into the Marvel universe.
+    </p>
+  </div>
+</section>
+<section id="Release_order">
+  <h2>Release Order</h2>
+  <div class="slider-container">
+    <div class="slider-track">
+    </div>
+
+      <button id="prevBtn">&#10094;</button>
+      <button id="nextBtn">&#10095;</button>
+</div>
+
+
+</section>
+
+</main>
+
+<script>
+    const track = document.querySelector('.slider-track');
+    const prevBtn = document.getElementById('prevBtn');
+    const nextBtn = document.getElementById('nextBtn');
+    const container = document.querySelector('.slider-container');
+
+    let currentIndex = 0;
+
+    function updateSlide() {
+      const slideWidth = container.clientWidth;
+      track.style.transform = `translateX(${-currentIndex * slideWidth}px)`;
+    }
+
+    prevBtn.addEventListener('click', () => {
+      currentIndex = currentIndex === 0 ? images.length - 1 : currentIndex - 1;
+      updateSlide();
+    });
+
+    nextBtn.addEventListener('click', () => {
+      currentIndex = currentIndex === images.length - 1 ? 0 : currentIndex + 1;
+      updateSlide();
+    });
+
+    window.addEventListener('resize', updateSlide);
+
+    updateSlide();
+</script>
 </body>
 </html>
