--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
   <nav>
     <a href="#about">About Marvel</a>
-    <a href="watch-order.html">Watch Order</a>
     <a href="movies.html">Movies</a>
     <a href="tv-shows.html">TV Shows</a>
     <a href="comics.html">Comics</a>
@@ -23,13 +22,13 @@
   <section class="hero">
     <h1>🦸 Watch the Marvel Universe in the Right Order</h1>
     <p>Chronological, Release, and Custom Orders – All in One Place</p>
-    <a href="watch-order.html" class="cta-button">Start Watching</a>
+    <a href="Movies.html" class="cta-button">Start Watching</a>
   </section>
 
   <main>
     <div class="quick-links">
-      <a href="watch-order.html">📅 Chronological Order</a>
-      <a href="watch-order.html#release">🗓️ Release Order</a>
+      <a href="Movies.html?sort=release">📅 Release Order</a>
+      <a href="Movies.html?sort=timeline">🗓️ Timeline Order</a>
       <a href="tv-shows.html">📺 TV Shows</a>
       <a href="movies.html">🎬 Movies List</a>
     </div>
