fixed the a tags

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <nav>
     <a href="#about">About Marvel</a>
-    <a href="movies.html">Movies</a>
+    <a href="Movies.html">Movies</a>
     <a href="tv-shows.html">TV Shows</a>
     <a href="comics.html">Comics</a>
   </nav>
