--- a/Movies.html
+++ b/Movies.html
@@ -25,7 +25,7 @@
     </p>
     <ul>
       <li><strong>Release Order:</strong> Watch the movies and shows in the order they were originally released. This lets you experience the MCU as the world saw it unfold, with surprises and reveals timed as intended.</li>
-      <li><strong>Chronological Order:</strong> Watch everything in the timeline order according to the story events. This method helps you follow the MCU’s timeline seamlessly from start to finish.</li>
+      <li><strong>Timeline Order:</strong> Watch everything in the timeline order according to the story events. This method helps you follow the MCU’s timeline seamlessly from start to finish.</li>
     </ul>
     <p>
       Both approaches have their own charm, and on this site, you can find detailed lists for each watch order, along with tips to enjoy the MCU fully. Whether you’re a newcomer or a longtime fan, these guides will help you dive deeper into the Marvel universe.
@@ -33,7 +33,7 @@
   </div>
 </section>
 <section id="WatchOrder">
-  <h2>Watch Order</h2>
+  <h2>Watch Order </h2>
 
   <div class="filter-buttons">
     <button id="releaseBtn">Release Order</button>
