fixed the texts size

--- a/Movies.html
+++ b/Movies.html
@@ -18,7 +18,7 @@
   </nav>
 <main>
   <section>
-  <h2>Watch Order Options</h2>
+  <h2>How to Watch the MCU</h2>
   <div>
     <p>
       The Marvel Cinematic Universe (MCU) offers a rich, interconnected story that can be enjoyed in different ways. To help you get the best viewing experience, here are the two most popular watch orders:
@@ -28,12 +28,12 @@
       <li><strong>Timeline Order:</strong> Watch everything in the timeline order according to the story events. This method helps you follow the MCU’s timeline seamlessly from start to finish.</li>
     </ul>
     <p>
-      Both approaches have their own charm, and on this site, you can find detailed lists for each watch order, along with tips to enjoy the MCU fully. Whether you’re a newcomer or a longtime fan, these guides will help you dive deeper into the Marvel universe.
+      Both approaches have their own charm, and on this site, you can find detailed lists for each watch order, along with tips to enjoy the MCU fully. Whether you’re a newcomer or a longtime fan, these guides will help you dive deeper into the Marvel universe. <br>
     </p>
   </div>
 </section>
 <section id="WatchOrder">
-  <h2>Watch Order </h2>
+  <h2>Select Your Watch Order</h2>
 
   <div class="filter-buttons">
     <button id="releaseBtn">Release Order</button>
